--- a/app/src/main/res/layout/activity_super2.xml
+++ b/app/src/main/res/layout/activity_super2.xml
@@ -13,7 +13,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="52dp"
         android:fontFamily="serif-monospace"
-        android:text="REGISTER WINDFROM"
+        android:text="REGISTER WINDFARM"
         android:textColor="#000000 "
         android:textColorHighlight="#0000"
         android:textSize="30dp"
